Provide a couple of PASSWORD-examples

--- a/wikish.config
+++ b/wikish.config
@@ -14,3 +14,9 @@ USER="kristian"
 # Feel free to replace this with something smarter
 echo password:
 read -s PASSWORD
+
+# Like:
+# PASSWORD=password
+# or: 
+# PASSWORD=$(gpg --decrypt ~/Documents/Passwords/wikipw)
+# ... you get the point. It's a shell script.
