Add RPL-example in config

--- a/wikish.config
+++ b/wikish.config
@@ -7,7 +7,12 @@ PROTO="https"
 HOST="wiki.varnish-software.com"
 
 # API-url, with trailing ?
+#
+# Example (works for wiki.varnish-software.com):
 API="mediawiki/api.php?"
+
+# Example (works for wiki.redpill-linpro.com):
+# API="api.php?"
 
 USER="kristian"
 
