RST tweaks and adding a config-trick

--- a/wikish.config
+++ b/wikish.config
@@ -1,5 +1,9 @@
 #!/bin/sh
 
+# Avoid trashing $PWD by using a tmp dir:
+#cd /home/kristian/tmp/wiki
+# (now THAT'S simple)
+
 # Protocol to use (http or https)
 PROTO="https"
 
